--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <link blah>
+    <title>
+      dude
+    </title>
   </head>
   <body>
     
