--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href=google.com>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>
       dude
     </title>
